# candy-case-study

./: README.md  candy_analysis.ipynb  pyproject.toml
data/: candy-data.csv
